tests/fixtures/invalid/chr_2_args.py
# chr() takes at most 1 argument, got 2
x = chr(1, 1)
